welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
marqueSol(c)
         ^FlowerPot:8: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
marqueSol(Color.yellow)
         ^FlowerPot:10: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
marqueSol(c)
         ^FlowerPot:12: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
marqueSol(c)
         ^FlowerPot:17: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.red)
              ^FlowerPot:19: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.Cyan)
              ^