welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def marqueSol()(c:Color){setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}
def Flower()(c:Color){setCouleurBrosse(c)
marqueSol(c)
avance(2)
marqueSol(Color.yellow)
gauche()
marqueSol(c)
recule(2)
marqueSol(c)

		
}
def growFlowers(){
	Flower(Color.red)
	avance(2)
	Flower(Color.Cyan)
}
